@@ -62,6 +62,7 @@ import org.apache.druid.java.util.emitter.EmittingLogger;
 import org.apache.druid.query.DruidMetrics;
 import org.apache.druid.server.DruidNode;
 import org.apache.druid.server.log.StartupLoggingConfig;
+import org.apache.druid.server.metrics.MetricsModule;
 import org.apache.druid.server.metrics.MonitorsConfig;
 import org.apache.druid.server.metrics.WorkerTaskCountStatsProvider;
 import org.apache.druid.tasklogs.TaskLogPusher;
@@ -99,6 +100,7 @@ public class ForkingTaskRunner
   private static final EmittingLogger LOGGER = new EmittingLogger(ForkingTaskRunner.class);
   private static final String CHILD_PROPERTY_PREFIX = "druid.indexer.fork.property.";
 
+  private static final String RUN_JAVA_COMMAND = "bin/run-java";
   /**
    * Properties to add on Java 11+. When updating this list, update all four:
    *  1) ForkingTaskRunner#STRONG_ENCAPSULATION_PROPERTIES (here) -->
@@ -114,7 +116,8 @@ public class ForkingTaskRunner
       "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
       "--add-opens=java.base/java.io=ALL-UNNAMED",
       "--add-opens=java.base/java.lang=ALL-UNNAMED",
-      "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED"
+      "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+      "--add-modules=jdk.incubator.vector"
   );
 
   private final ForkingTaskRunnerConfig config;
@@ -243,7 +246,7 @@ public class ForkingTaskRunner
                           taskClasspath = config.getClasspath();
                         }
 
-                        command.add(config.getJavaCommand());
+                        command.add(getJavaCommand());
 
                         if (JvmUtils.majorVersion() >= 11) {
                           command.addAll(STRONG_ENCAPSULATION_PROPERTIES);
@@ -372,6 +375,7 @@ public class ForkingTaskRunner
 
                         command.addSystemProperty("druid.indexer.task.baseTaskDir", storageSlot.getDirectory().getAbsolutePath());
                         command.addSystemProperty("druid.indexer.task.tmpStorageBytesPerTask", storageSlot.getNumBytes());
+                        command.addSystemProperty(MetricsModule.PROPERTY_PEON_MANAGED, true);
 
                         command.add("org.apache.druid.cli.Main");
                         command.add("internal");
@@ -387,7 +391,7 @@ public class ForkingTaskRunner
                         // If the task type is queryable, we need to load broadcast segments on the peon, used for
                         // join queries. This is replaced by --loadBroadcastDatasourceMode option, but is preserved here
                         // for backwards compatibility and can be removed in a future release.
-                        if (task.supportsQueries()) {
+                        if (task.getBroadcastDatasourceLoadingSpec().getMode().needsBroadcastSegments()) {
                           command.add("--loadBroadcastSegments");
                           command.add("true");
                         }
@@ -501,6 +505,33 @@ public class ForkingTaskRunner
       saveRunningTasks();
       return tasks.get(task.getId()).getResult();
     }
+  }
+
+  private String getJavaCommand()
+  {
+    return getJavaCommand(config.getJavaCommand(), new File("."));
+  }
+
+  /**
+   * Resolves the command used to launch the peon JVM, in order of precedence:
+   * <ol>
+   *   <li>the operator-specified {@code druid.indexer.runner.javaCommand}, if set;</li>
+   *   <li>the bundled {@link #RUN_JAVA_COMMAND} script if present in {@code workingDir}, so that
+   *   {@code DRUID_JAVA_HOME} / {@code JAVA_HOME} are honored;</li>
+   *   <li>otherwise plain {@code java} on the {@code PATH}.</li>
+   * </ol>
+   * The existence check against {@code workingDir} is reliable because peons inherit this process's working
+   * directory.
+   */
+  public static String getJavaCommand(@Nullable String configuredJavaCommand, File workingDir)
+  {
+    if (configuredJavaCommand != null) {
+      return configuredJavaCommand;
+    }
+    if (new File(workingDir, RUN_JAVA_COMMAND).exists()) {
+      return RUN_JAVA_COMMAND;
+    }
+    return ForkingTaskRunnerConfig.DEFAULT_JAVA_COMMAND;
   }
 
   @VisibleForTesting
@@ -903,7 +934,7 @@ public class ForkingTaskRunner
       FileUtils.mkdirp(attemptDir);
     }
     catch (IOException e) {
-      throw new ISE("Error creating directory", e);
+      throw new ISE(e, "Error creating directory[%s]", attemptDir);
     }
     int maxAttempt =
         Arrays.stream(attemptDir.listFiles(File::isDirectory))
@@ -915,7 +946,7 @@ public class ForkingTaskRunner
       FileUtils.mkdirp(attempt);
     }
     catch (IOException e) {
-      throw new ISE("Error creating directory", e);
+      throw new ISE(e, "Error creating directory[%s]", attempt);
     }
     return maxAttempt + 1;
   }
@@ -965,4 +996,3 @@ public class ForkingTaskRunner
 
   }
 }
-
